--- a/src/com/reportes/VentasAll.jrxml
+++ b/src/com/reportes/VentasAll.jrxml
@@ -13,7 +13,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select vc.num, vc.fecha, count(vd.articulo_id) as 'Cant. Articulos',vc.total from VentaCab vc inner join VentaDet vd on vc.num = vd.VentaCab_num group by vc.num;]]>
+		<![CDATA[select vc.num, vc.fecha, count(vd.articulo_id) as 'Cant. Articulos',vc.total from VentaCab vc inner join VentaDet vd on vc.num = vd.VentaCab_num where vc.fecha between $P{fecha1} and $P{fecha2} group by vc.num;]]>
 	</queryString>
 	<field name="num" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -21,7 +21,7 @@
 	<field name="fecha" class="java.sql.Date">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="Cant. Articulos" class="java.lang.Integer"/>
+	<field name="Cant. Articulos" class="java.lang.Long"/>
 	<field name="total" class="java.lang.Double">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
