SE AGREGO LA OPCION AL EVENTO DOBLE CLICK EN VENTAS Y COMPRAS SE MUESTRA EL DETALLE DE UNA VENTA O UNA COMPRA. AGREGANDOLE ESTILOS A LA TABLA Y LA INFORMACION PERTINENTE A CADA DETALLE

--- a/src/com/app/VentaApp.form
+++ b/src/com/app/VentaApp.form
@@ -434,6 +434,7 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="agregarActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="agregarKeyPressed"/>
               </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -585,6 +586,7 @@
                 </Component>
                 <Component class="javax.swing.JTextField" name="cantidad">
                   <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="cantidadFocusLost"/>
                     <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cantidadKeyPressed"/>
                   </Events>
                 </Component>
